--- a/crawlerNews.china/src/main/resources/templates/index.html
+++ b/crawlerNews.china/src/main/resources/templates/index.html
@@ -1,125 +1,118 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 
+<html>
 
-        <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+    <head>
 
-        <html>
+        <meta charset="utf-8"><link rel="icon" href="https://static.jianshukeji.com/highcharts/images/favicon.ico">
 
-            <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-                <meta charset="utf-8"><link rel="icon" href="https://static.jianshukeji.com/highcharts/images/favicon.ico">
+        <style>
 
-                <meta name="viewport" content="width=device-width, initial-scale=1">
+            /* css 代码  */
 
-                <style>
+        </style>
 
-                    /* css 代码  */
+        <script src="https://img.hcharts.cn/jquery/jquery-1.8.3.min.js"></script>
 
-                </style>
+        <script src="https://img.hcharts.cn/highcharts/highcharts.js"></script>
 
-                <script src="https://img.hcharts.cn/jquery/jquery-1.8.3.min.js"></script>
+        <script src="https://img.hcharts.cn/highcharts/modules/exporting.js"></script>
 
-                <script src="https://img.hcharts.cn/highcharts/highcharts.js"></script>
+        <script src="https://img.hcharts.cn/highcharts-plugins/highcharts-zh_CN.js"></script>
 
-                <script src="https://img.hcharts.cn/highcharts/modules/exporting.js"></script>
+    </head>
 
-                <script src="https://img.hcharts.cn/highcharts-plugins/highcharts-zh_CN.js"></script>
+    <body>
 
-            </head>
+        <div id="container" style="min-width:400px;height:400px"></div>
 
-            <body>
+        <script>
 
-                <div id="container" style="min-width:400px;height:400px"></div>
-
-                <script>
-
-                $(function () {
-                    $.getJSON('https://data.jianshukeji.com/jsonp?filename=json/usdeur.json&callback=?', function (data) {
-                        $('#container').highcharts({
-                            chart: {
-                                zoomType: 'x'
-                            },
-                            title: {
-                                text: '美元兑欧元汇率走势图'
-                            },
-                            subtitle: {
-                                text: document.ontouchstart === undefined ?
-                                '鼠标拖动可以进行缩放' : '手势操作进行缩放'
-                            },
-                            xAxis: {
-                                type: 'datetime',
-                                dateTimeLabelFormats: {
-                                    millisecond: '%H:%M:%S.%L',
-                                    second: '%H:%M:%S',
-                                    minute: '%H:%M',
-                                    hour: '%H:%M',
-                                    day: '%m-%d',
-                                    week: '%m-%d',
-                                    month: '%Y-%m',
-                                    year: '%Y'
-                                }
-                            },
-                            tooltip: {
-                                dateTimeLabelFormats: {
-                                    millisecond: '%H:%M:%S.%L',
-                                    second: '%H:%M:%S',
-                                    minute: '%H:%M',
-                                    hour: '%H:%M',
-                                    day: '%Y-%m-%d',
-                                    week: '%m-%d',
-                                    month: '%Y-%m',
-                                    year: '%Y'
-                                }
-                            },
-                            yAxis: {
-                                title: {
-                                    text: '汇率'
-                                }
-                            },
-                            legend: {
-                                enabled: false
-                            },
-                            plotOptions: {
-                                area: {
-                                    fillColor: {
-                                        linearGradient: {
-                                            x1: 0,
-                                            y1: 0,
-                                            x2: 0,
-                                            y2: 1
-                                        },
-                                        stops: [
-                                            [0, Highcharts.getOptions().colors[0]],
-                                            [1, Highcharts.Color(Highcharts.getOptions().colors[0]).setOpacity(0).get('rgba')]
-                                        ]
-                                    },
-                                    marker: {
-                                        radius: 2
-                                    },
-                                    lineWidth: 1,
-                                    states: {
-                                        hover: {
-                                            lineWidth: 1
-                                        }
-                                    },
-                                    threshold: null
-                                }
-                            },
-                            series: [{
-                                type: 'area',
-                                name: '美元兑欧元',
-                                data: data
-                            }]
+        Highcharts.setOptions({
+            global: {
+                useUTC: false
+            }
+        });
+        function activeLastPointToolip(chart) {
+            var points = chart.series[0].points;
+            chart.tooltip.refresh(points[points.length -1]);
+        }
+        $('#container').highcharts({
+            chart: {
+                type: 'spline',
+                animation: Highcharts.svg, // don't animate in old IE
+                marginRight: 10,
+                events: {
+                    load: function () {
+                        // set up the updating of the chart each second
+                        var series = this.series[0],
+                            chart = this;
+                        setInterval(function () {
+                        	$.get("/data",function(data){
+	                            var x = (new Date()).getTime(); // current time
+	                            series.addPoint([x, data], true, true);
+	                            activeLastPointToolip(chart);
+                        	});
+                        }, 1000);
+                    }
+                }
+            },
+            title: {
+                text: '动态模拟实时数据'
+            },
+            xAxis: {
+                type: 'datetime',
+                tickPixelInterval: 150
+            },
+            yAxis: {
+                title: {
+                    text: '值'
+                },
+                plotLines: [{
+                    value: 0,
+                    width: 1,
+                    color: '#808080'
+                }]
+            },
+            tooltip: {
+                formatter: function () {
+                    return '<b>' + this.series.name + '</b><br/>' +
+                        Highcharts.dateFormat('%Y-%m-%d %H:%M:%S', this.x) + '<br/>' +
+                        Highcharts.numberFormat(this.y, 2);
+                }
+            },
+            legend: {
+                enabled: false
+            },
+            exporting: {
+                enabled: false
+            },
+            series: [{
+                name: '随机数据',
+                data: (function () {
+                    // generate an array of random data
+                    var data = [],
+                        time = (new Date()).getTime(),
+                        i;
+                    for (i = -19; i <= 0; i += 1) {
+                        data.push({
+                            x: time + i * 1000,
+                            y: Math.random()
                         });
-                    });
-                });
+                    }
+                    return data;
+                }())
+            }]
+        }, function(c) {
+            activeLastPointToolip(c)
+        });
 
+ 
 
-                </script>
+        </script>
 
-            </body>
+    </body>
 
-        </html>
-
-
-​
-
+</html>
